# download-met-data

./: .gitignore  README.md  config.example.json  pyproject.toml  run.py
archive/: example_small_area_hamburg.sh  get_era5_cds.py
src/: main.py  script_01_download_grib.py
