[tool.poetry]
name = "download-cds-data"
version = "0.1.0"
description = ""
authors = ["Moritz Makowski <moritz@dostuffthatmatters.dev>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
